Added a landing page

--- a/index.html
+++ b/index.html
@@ -19,24 +19,32 @@
                </a>
                <h1>Pippinns</h1>
                <ul>
-                  <a href="#">
-                     <li>home</li>
-                  </a>
-                  <a href="#">
-                     <li>about</li>
-                  </a>
-                  <a href="#" class="nav-pricing">
-                     <li>pricing</li>
-                  </a>
-                  <a href="#">
-                     <li>contact</li>
-                     <div class="contact-back"></div>
-                  </a>
+                  <li><a href="#">home</a></li>
+                  <li><a href="#">about</a></li>
+                  <li><a href="#">pricing</a></li>
+                  <li><a href="#" class="contact-nav">contact</a></li>
                </ul>
             </div>
          </div>
       </nav>
    </header>
+   <div class="section-2">
+      <div class="landing-p">
+         <div class="lp-left-slope">
+            <h1 class="lp-left-title1">Home</h1>
+            <div class="lp-seperator"></div>
+            <h1 class="lp-left-title2">Pippinns</h1>
+         </div>
+         <div class="lp-content">
+            <h4>Your Health Matters</h4>
+            <h1>World Class Gym Workouts</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolorum asperiores possimus, natus at<br> amet explicabo aspernatur consectetur adipisicing elit.</p>
+            <button type="button" class="lp-button">START TODAY</button>
+         </div>
+      </div>
+   </div>
    </div>
 </body>
 </html>
+
+<div style="margin-top: 500px;"></div>
