Added a what we offer

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
          </div>
       </div>
    </div>
+   <div class="section-2">
+      <div class="wwo">
+         <div class="wwo-slope">
+            <h1>WHAT <br>WE <br>OFFER</h1>
+         </div>
+         <div class="wwo-content">
+            <p class="wwo-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
+            <p class="wwo-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
+         </div>
+      </div>
+   </div>
    </div>
 </body>
 </html>
