Added a why us section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          </div>
       </div>
    </div>
-   <div class="section-2">
+   <div class="section-3">
       <div class="wwo">
          <div class="wwo-slope">
             <h1>WHAT <br>WE <br>OFFER</h1>
@@ -52,6 +52,17 @@
             <p class="wwo-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
             <p class="wwo-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
          </div>
+      </div>
+   </div>
+   <div class="section-4">
+      <div class="whyus">
+         <div class="whyus-content">
+            <h1>WHY JOIN US</h1>
+            <div class="whyus-seperator"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem <br> voluptatum, cumque fuga totam fugiat corporis officia aliquam sit<br> porro nesciunt commodi nobis quibusdam!</p>
+            <button type="button" class="whyus-button">LEARN MORE</button>
+         </div>
+         <img src="./Images/Png/whyus-gym-min.png" alt="A person in a gym" class="whyus-img">
       </div>
    </div>
    </div>
