Added a healthy lifestyle section

--- a/index.html
+++ b/index.html
@@ -10,61 +10,72 @@
 </head>
 <body>
    <div class="cont">
-   <header>
-      <nav>
-         <div class="section-1">
-            <div class="nav">
-               <a href="./index.html">
-                  <img src="./Images/Svg/pippenns-logo.svg" alt="a logo" class="logo">
-               </a>
-               <h1>Pippinns</h1>
-               <ul>
-                  <li><a href="#">home</a></li>
-                  <li><a href="#">about</a></li>
-                  <li><a href="#">pricing</a></li>
-                  <li><a href="#" class="contact-nav">contact</a></li>
-               </ul>
+      <header>
+         <nav>
+            <div class="section-1">
+               <div class="nav">
+                  <a href="./index.html">
+                     <img src="./Images/Svg/pippenns-logo.svg" alt="a logo" class="logo">
+                  </a>
+                  <h1>Pippinns</h1>
+                  <ul>
+                     <li><a href="#">home</a></li>
+                     <li><a href="#">about</a></li>
+                     <li><a href="#">pricing</a></li>
+                     <li><a href="#" class="contact-nav">contact</a></li>
+                  </ul>
+               </div>
+            </div>
+         </nav>
+      </header>
+      <div class="section-2">
+         <div class="landing-p">
+            <div class="lp-left-slope">
+               <h1 class="lp-left-title1">Home</h1>
+               <div class="lp-seperator"></div>
+               <h1 class="lp-left-title2">Pippinns</h1>
+            </div>
+            <div class="lp-content">
+               <h4>Your Health Matters</h4>
+               <h1>World Class Gym Workouts</h1>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolorum asperiores possimus, natus at<br> amet explicabo aspernatur consectetur adipisicing elit.</p>
+               <button type="button" class="lp-button">START TODAY</button>
             </div>
          </div>
-      </nav>
-   </header>
-   <div class="section-2">
-      <div class="landing-p">
-         <div class="lp-left-slope">
-            <h1 class="lp-left-title1">Home</h1>
-            <div class="lp-seperator"></div>
-            <h1 class="lp-left-title2">Pippinns</h1>
-         </div>
-         <div class="lp-content">
-            <h4>Your Health Matters</h4>
-            <h1>World Class Gym Workouts</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolorum asperiores possimus, natus at<br> amet explicabo aspernatur consectetur adipisicing elit.</p>
-            <button type="button" class="lp-button">START TODAY</button>
+      </div>
+      <div class="section-3">
+         <div class="wwo">
+            <div class="wwo-slope">
+               <h1>WHAT <br>WE <br>OFFER</h1>
+            </div>
+            <div class="wwo-content">
+               <p class="wwo-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
+               <p class="wwo-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
+            </div>
          </div>
       </div>
-   </div>
-   <div class="section-3">
-      <div class="wwo">
-         <div class="wwo-slope">
-            <h1>WHAT <br>WE <br>OFFER</h1>
-         </div>
-         <div class="wwo-content">
-            <p class="wwo-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
-            <p class="wwo-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
+      <div class="section-4">
+         <div class="whyus">
+            <div class="whyus-content">
+               <h1>WHY JOIN US</h1>
+               <div class="whyus-seperator"></div>
+               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem <br> voluptatum, cumque fuga totam fugiat corporis officia aliquam sit<br> porro nesciunt commodi nobis quibusdam!</p>
+               <button type="button" class="whyus-button">LEARN MORE</button>
+            </div>
+            <img src="./Images/Png/whyus-gym-min.png" alt="A person in a gym" class="whyus-img">
          </div>
       </div>
-   </div>
-   <div class="section-4">
-      <div class="whyus">
-         <div class="whyus-content">
-            <h1>WHY JOIN US</h1>
-            <div class="whyus-seperator"></div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem <br> voluptatum, cumque fuga totam fugiat corporis officia aliquam sit<br> porro nesciunt commodi nobis quibusdam!</p>
-            <button type="button" class="whyus-button">LEARN MORE</button>
+      <div class="section-5">
+         <div class="healthy">
+            <div class="healty-slope">
+               <h1>HEALTHY <br>LIFE <br>STYLE</h1>
+            </div>
+            <div class="healthy-content">
+               <p class="healthy-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <p class="healthy-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+            </div>
          </div>
-         <img src="./Images/Png/whyus-gym-min.png" alt="A person in a gym" class="whyus-img">
       </div>
-   </div>
    </div>
 </body>
 </html>
