--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
             </div>
          </div>
       </div>
+      <div class="section-6">
+         <div class="trainer">
+            <h1>HIRE A TRAINER</h1>
+            <div class="trainer-seperator"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing<br> elit. Autem voluptatum, cumque fuga totam fugiat<br> corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+            <button type="button" class="trainer-button">HIRE NOW</button>
+            <img src="./Images/Png/hire-gym-min.png" alt="a gym trainer" class="trainer-img">
+         </div>
+      </div>
    </div>
 </body>
 </html>
