Added a pricing section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,46 @@
             <img src="./Images/Png/hire-gym-min.png" alt="a gym trainer" class="trainer-img">
          </div>
       </div>
+      <div class="section-7">
+         <div class="pricing">
+            <div class="pricing-slope">
+               <h1 class="pricing-type">BASIC</h1>
+               <div class="pricing-seperator1"></div>
+               <h1 class="pricing-price">14.99$<small class="price-month">/month</small></h1>
+               <div class="pricing-seperator2"></div>
+               <p>Lorem ipsum dolor</p>
+               <p class="locked-perk">Lorem ipsum dolor</p>
+               <p class="locked-perk">Lorem ipsum dolor</p>
+               <p class="locked-perk">Lorem ipsum dolor</p>
+               <p class="locked-perk">Lorem ipsum dolor</p>
+               <button type="button" class="pricing-button">CHOOSE PLAN</button>
+            </div>
+            <div class="pricing-slope">
+               <h1 class="pricing-type">BASIC</h1>
+               <div class="pricing-seperator1"></div>
+               <h1 class="pricing-price">14.99$<small class="price-month">/month</small></h1>
+               <div class="pricing-seperator2"></div>
+               <p>Lorem ipsum dolor</p>
+               <p>Lorem ipsum dolor</p>
+               <p>Lorem ipsum dolor</p>
+               <p class="locked-perk">Lorem ipsum dolor</p>
+               <p class="locked-perk">Lorem ipsum dolor</p>
+               <button type="button" class="pricing-button">CHOOSE PLAN</button>
+            </div>
+            <div class="pricing-slope">
+               <h1 class="pricing-type">BASIC</h1>
+               <div class="pricing-seperator1"></div>
+               <h1 class="pricing-price">14.99$<small class="price-month">/month</small></h1>
+               <div class="pricing-seperator2"></div>
+               <p>Lorem ipsum dolor</p>
+               <p>Lorem ipsum dolor</p>
+               <p>Lorem ipsum dolor</p>
+               <p>Lorem ipsum dolor</p>
+               <p>Lorem ipsum dolor</p>
+               <button type="button" class="pricing-button">CHOOSE PLAN</button>
+            </div>
+         </div>
+      </div>
    </div>
 </body>
 </html>
