Added a testimonial section

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                <button type="button" class="pricing-button">CHOOSE PLAN</button>
             </div>
             <div class="pricing-slope">
-               <h1 class="pricing-type">BASIC</h1>
+               <h1 class="pricing-type">STANDART</h1>
                <div class="pricing-seperator1"></div>
-               <h1 class="pricing-price">14.99$<small class="price-month">/month</small></h1>
+               <h1 class="pricing-price">24.99$<small class="price-month">/month</small></h1>
                <div class="pricing-seperator2"></div>
                <p>Lorem ipsum dolor</p>
                <p>Lorem ipsum dolor</p>
@@ -112,9 +112,9 @@
                <button type="button" class="pricing-button">CHOOSE PLAN</button>
             </div>
             <div class="pricing-slope">
-               <h1 class="pricing-type">BASIC</h1>
+               <h1 class="pricing-type">PREMIUM</h1>
                <div class="pricing-seperator1"></div>
-               <h1 class="pricing-price">14.99$<small class="price-month">/month</small></h1>
+               <h1 class="pricing-price">34.99$<small class="price-month">/month</small></h1>
                <div class="pricing-seperator2"></div>
                <p>Lorem ipsum dolor</p>
                <p>Lorem ipsum dolor</p>
@@ -123,6 +123,18 @@
                <p>Lorem ipsum dolor</p>
                <button type="button" class="pricing-button">CHOOSE PLAN</button>
             </div>
+         </div>
+      </div>
+      <div class="section-8">
+         <div class="test">
+            <div class="test-content">
+               <h1>TESTIMONIALS</h1>
+               <div class="test-seperator"></div>
+               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <h2>-Thoams Johnson</h2>
+               <button type="button" class="test-button">VIEW MORE</button>
+            </div>
+            <div class="test-right"></div>
          </div>
       </div>
    </div>
