Added a contact section and a footer section, fixed bugs, improved things

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                <h1>World Class Gym Workouts</h1>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolorum asperiores possimus, natus at<br> amet explicabo aspernatur consectetur adipisicing elit.</p>
                <button type="button" class="lp-button">START TODAY</button>
+               <div class="socials">
+                  <img src="./Images/Svg/facebook-f-brands.svg" alt="facebook icon" class="fb">
+                  <img src="./Images/Svg/twitter-brands.svg" alt="twitter icon" class="twitter">
+                  <img src="./Images/Svg/instagram-brands.svg" alt="instagram icon" class="ig">
+               </div>
             </div>
          </div>
       </div>
@@ -137,8 +142,33 @@
             <div class="test-right"></div>
          </div>
       </div>
+      <div class="section-9">
+         <div class="contact">
+            <div class="contact-info">
+               <img src="./Images/Svg/contact-gym.svg" alt="an open envelope" class="envelope">
+               <h1 class="c-address">Address: 115, Gough st, bd21 h1p</h1>
+               <h1 class="c-phone">0800 214 5252</h1>
+               <h1 class="c-email">pippinnsofficial@gmail.com</h1>
+               <h1 class="c-time">Mon - Sun: 5am - 23pm</h1>
+            </div>
+            <div class="contact-input">
+               <h1>CONTACT US</h1>
+               <input type="text" class="i-name" required placeholder="Full Name">
+               <input type="email" class="i-email" required placeholder="Email Address">
+               <input type="text" class="i-msg" required placeholder="Your Messagee">
+               <button type="submit" class="i-button">SEND MESSAGE</button>
+            </div>
+         </div>
+      </div>
+      <footer>
+         <div class="section-10">
+            <div class="footer">
+               <h1>Images from Pexels/Unsplashed</h1>
+               <h1>Copyright © 2020 Pippinns</h1>
+               <h1>Fontawsome Fonts</h1>
+            </div>
+         </div>
+      </footer>
    </div>
 </body>
 </html>
-
-<div style="margin-top: 500px;"></div>
