Fixed more bugs

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                <h1>CONTACT US</h1>
                <input type="text" class="i-name" required placeholder="Full Name">
                <input type="email" class="i-email" required placeholder="Email Address">
-               <input type="text" class="i-msg" required placeholder="Your Messagee">
+               <textarea class="i-msg" cols="30" rows="10" placeholder="Your Messaage"></textarea>
                <button type="submit" class="i-button">SEND MESSAGE</button>
             </div>
          </div>
