Added a navbar, ladning page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                   </a>
                   <h1>Pippinns</h1>
                   <ul>
-                     <li><a href="#">home</a></li>
-                     <li><a href="#">about</a></li>
-                     <li><a href="#">pricing</a></li>
-                     <li><a href="#" class="contact-nav">contact</a></li>
+                     <li><a href="./index.html">home</a></li>
+                     <li><a href="./about.html">about</a></li>
+                     <li><a href="#section-7">pricing</a></li>
+                     <li><a href="#section-9" class="contact-nav">contact</a></li>
                   </ul>
                </div>
             </div>
@@ -90,7 +90,7 @@
             <img src="./Images/Png/hire-gym-min.png" alt="a gym trainer" class="trainer-img">
          </div>
       </div>
-      <div class="section-7">
+      <div class="section-7", id="section-7">
          <div class="pricing">
             <div class="pricing-slope">
                <h1 class="pricing-type">BASIC</h1>
@@ -142,7 +142,7 @@
             <div class="test-right"></div>
          </div>
       </div>
-      <div class="section-9">
+      <div class="section-9", id="section-9">
          <div class="contact">
             <div class="contact-info">
                <img src="./Images/Svg/contact-gym.svg" alt="an open envelope" class="envelope">
@@ -170,5 +170,8 @@
          </div>
       </footer>
    </div>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+   <script src="./script.js"></script>
 </body>
 </html>
