Added an about us section

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="preconnect" href="https://fonts.gstatic.com">
-   <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans:wght@600&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="./style.css">
    <title>Pippinns - About</title>
 </head>
@@ -54,7 +54,7 @@
                <p class="pip-text1">Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Autem voluptatum, cumque<br> fuga totam </p>
                <p class="pip-text2">Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Autem voluptatum, cumque<br> fuga totam </p>
             </div>
-            <!-- <img src="./Images/Png/about-gym 1-min.png" alt="a gym" class="pip-img"> -->
+            <img src="./Images/Png/about-gym 1-min.png" alt="a gym" class="pip-img">
          </div>
       </div>
    </div>
