Added a staff section

--- a/about.html
+++ b/about.html
@@ -57,6 +57,31 @@
             <img src="./Images/Png/about-gym 1-min.png" alt="a gym" class="pip-img">
          </div>
       </div>
+      <div class="section-4">
+         <div class="staff">
+            <div class="staff-slope">
+               <img src="./Images/Png/sraff-3-min.png" alt="a person" class="staff-1">
+               <div class="staff-info">
+                  <h1>David White</h1>
+                  <h2>Lorem Ipsum</h2>
+               </div>
+            </div>
+            <div class="staff-slope">
+               <img src="./Images/Png/staff-2-min.png" alt="a person" class="staff-2">
+               <div class="staff-info">
+                  <h1>Thomas Marco</h1>
+                  <h2>Lorem Ipsum</h2>
+               </div>
+            </div>
+            <div class="staff-slope">
+               <img src="./Images/Png/staff-1-min.png" alt="a person" class="staff-2">
+               <div class="staff-info">
+                  <h1>Daniel Williams</h1>
+                  <h2>Lorem Ipsum</h2>
+               </div>
+            </div>
+         </div>
+      </div>
    </div>
 </body>
 </html>
