Added an acces seaction

--- a/about.html
+++ b/about.html
@@ -82,6 +82,27 @@
             </div>
          </div>
       </div>
+      <div class="section-5">
+         <div class="access">
+            <h1 class="access-title">ACCESS</h1>
+            <div class="access-content">
+               <div class="access-address">
+                  <h2>Address</h2>
+                  <p>115, Gough st, bd21 h1p</p>
+               </div>
+               <div class="access-open">
+                  <h2>Open</h2>
+                  <p>Mon - Sun: 5am - 23pm</p>
+               </div>
+               <div class="access-tel">
+                  <h2>Tel</h2>
+                  <p>0800 214 5252</p>
+               </div>
+            </div>
+            <div class="access-rect"></div>
+            <img src="./Images/Png/acces-gym-min.jpg" alt="a gym" class="access-img">
+         </div>
+      </div>
    </div>
 </body>
 </html>
