Added a contact us section

--- a/about.html
+++ b/about.html
@@ -103,8 +103,33 @@
             <img src="./Images/Png/acces-gym-min.jpg" alt="a gym" class="access-img">
          </div>
       </div>
+      <div class="section-9", id="section-9">
+         <div class="contact-a">
+            <div class="contact-info">
+               <img src="./Images/Svg/contact-gym.svg" alt="an open envelope" class="envelope">
+               <h1 class="c-address">Address: 115, Gough st, bd21 h1p</h1>
+               <h1 class="c-phone">0800 214 5252</h1>
+               <h1 class="c-email">pippinnsofficial@gmail.com</h1>
+               <h1 class="c-time">Mon - Sun: 5am - 23pm</h1>
+            </div>
+            <div class="contact-input">
+               <h1>CONTACT US</h1>
+               <input type="text" class="i-name" required placeholder="Full Name">
+               <input type="email" class="i-email" required placeholder="Email Address">
+               <textarea class="i-msg" cols="30" rows="10" placeholder="Your Messaage"></textarea>
+               <button type="submit" class="i-button">SEND MESSAGE</button>
+            </div>
+         </div>
+      </div>
+      <footer>
+         <div class="section-10">
+            <div class="footer">
+               <h1>Images from Pexels/Unsplashed</h1>
+               <h1>Copyright © 2020 Pippinns</h1>
+               <h1>Fontawsome Fonts</h1>
+            </div>
+         </div>
+      </footer>
    </div>
 </body>
 </html>
-
-<div style="margin-top: 500px;"></div>
