--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
                   <ul>
                      <li><a href="./index.html">home</a></li>
                      <li><a href="./about.html">about</a></li>
-                     <li><a href="#section-7">pricing</a></li>
-                     <li><a href="#section-9" class="contact-nav">contact</a></li>
+                     <li><a href="./">pricing</a></li>
+                     <li><a href="#section-6" class="contact-nav">contact</a></li>
                   </ul>
                </div>
             </div>
@@ -103,7 +103,7 @@
             <img src="./Images/Png/acces-gym-min.jpg" alt="a gym" class="access-img">
          </div>
       </div>
-      <div class="section-9", id="section-9">
+      <div class="section-6", id="section-6">
          <div class="contact-a">
             <div class="contact-info">
                <img src="./Images/Svg/contact-gym.svg" alt="an open envelope" class="envelope">
@@ -122,7 +122,7 @@
          </div>
       </div>
       <footer>
-         <div class="section-10">
+         <div class="section-7">
             <div class="footer">
                <h1>Images from Pexels/Unsplashed</h1>
                <h1>Copyright © 2020 Pippinns</h1>
