--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                      <li><a href="#section-7">pricing</a></li>
                      <li><a href="#section-9" class="contact-nav">contact</a></li>
                   </ul>
+                  <div class="burger">
+                     <div class="burger-line"></div>
+                  </div>
                </div>
             </div>
          </nav>
