Edited ladning page for mobile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="lp-content">
                <h4>Your Health Matters</h4>
                <h1>World Class Gym Workouts</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolorum asperiores possimus, natus at<br> amet explicabo aspernatur consectetur adipisicing elit.</p>
+               <p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Voluptatum dolorum<br> asperiores possimus, natus at amet explicabo<br> aspernatur consectetur adipisicing elit.</p>
                <button type="button" class="lp-button">START TODAY</button>
                <div class="socials">
                   <img src="./Images/Svg/facebook-f-brands.svg" alt="facebook icon" class="fb">
