Added a what we offer adn whys ussection

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <div class="lp-content">
                <h4>Your Health Matters</h4>
                <h1>World Class Gym Workouts</h1>
-               <p>Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Voluptatum dolorum<br> asperiores possimus, natus at amet explicabo<br> aspernatur consectetur adipisicing elit.</p>
+               <p class="lp-text-d">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolorum asperiores possimus, natus at amet explicabo aspernatur consectetur adipisicing elit.</p>
+               <p class="lp-text-m">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit. Voluptatum dolorum<br> asperiores possimus, natus at amet explicabo<br> aspernatur consectetur adipisicing elit.</p>
                <button type="button" class="lp-button">START TODAY</button>
                <div class="socials">
                   <img src="./Images/Svg/facebook-f-brands.svg" alt="facebook icon" class="fb">
@@ -54,11 +55,14 @@
       <div class="section-3">
          <div class="wwo">
             <div class="wwo-slope">
-               <h1>WHAT <br>WE <br>OFFER</h1>
+               <h1 class="wwo-slope-d">WHAT <br>WE <br>OFFER</h1>
+               <h1 class="wwo-slope-m">WHAT WE OFFER</h1>
             </div>
             <div class="wwo-content">
                <p class="wwo-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
                <p class="wwo-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
+               <p class="wwo-text1-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
+               <p class="wwo-text2-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
             </div>
          </div>
       </div>
@@ -67,7 +71,8 @@
             <div class="whyus-content">
                <h1>WHY JOIN US</h1>
                <div class="whyus-seperator"></div>
-               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem <br> voluptatum, cumque fuga totam fugiat corporis officia aliquam sit<br> porro nesciunt commodi nobis quibusdam!</p>
+               <p class="whyus-text-d">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem <br> voluptatum, cumque fuga totam fugiat corporis officia aliquam sit<br> porro nesciunt commodi nobis quibusdam!</p>
+               <p class="whyus-text-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem  voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
                <button type="button" class="whyus-button">LEARN MORE</button>
             </div>
             <img src="./Images/Png/whyus-gym-min.png" alt="A person in a gym" class="whyus-img">
