Edited a healthy life style section

--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
       <div class="section-5">
          <div class="healthy">
             <div class="healty-slope">
-               <h1>HEALTHY <br>LIFE <br>STYLE</h1>
+               <h1 class="healthy-title-d">HEALTHY <br>LIFE <br>STYLE</h1>
+               <h1 class="healthy-title-m">HEALTHY LIFE STYLE</h1>
             </div>
             <div class="healthy-content">
                <p class="healthy-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
                <p class="healthy-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <p class="healthy-text1-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <p class="healthy-text2-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
             </div>
          </div>
       </div>
