Edited a pricing and a hire a trainer section for mobile

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="healthy-content">
                <p class="healthy-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
                <p class="healthy-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
-               <p class="healthy-text1-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
-               <p class="healthy-text2-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <p class="healthy-text1-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
+               <p class="healthy-text2-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
             </div>
          </div>
       </div>
@@ -96,7 +96,8 @@
          <div class="trainer">
             <h1>HIRE A TRAINER</h1>
             <div class="trainer-seperator"></div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing<br> elit. Autem voluptatum, cumque fuga totam fugiat<br> corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+            <p class="trainer-text-d">Lorem ipsum dolor sit, amet consectetur adipisicing<br> elit. Autem voluptatum, cumque fuga totam fugiat<br> corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+            <p class="trainer-text-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
             <button type="button" class="trainer-button">HIRE NOW</button>
             <img src="./Images/Png/hire-gym-min.png" alt="a gym trainer" class="trainer-img">
          </div>
