Added a testimonial section for mobile

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <div class="test-content">
                <h1>TESTIMONIALS</h1>
                <div class="test-seperator"></div>
-               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <p class="test-text-d">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum,<br> cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi<br> nobis quibusdam!</p>
+               <p class="test-text-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt commodi nobis quibusdam!</p>
                <h2>-Thoams Johnson</h2>
                <button type="button" class="test-button">VIEW MORE</button>
             </div>
