Edited home section, about us section and staff section for mobile

--- a/about.html
+++ b/about.html
@@ -24,6 +24,9 @@
                      <li><a href="./">pricing</a></li>
                      <li><a href="#section-6" class="contact-nav">contact</a></li>
                   </ul>
+                  <div class="burger">
+                     <div class="burger-line"></div>
+                  </div>
                </div>
             </div>
          </nav>
@@ -44,6 +47,8 @@
                <img src="./Images/Svg/twitter-brands.svg" alt="twitter icon" class="a-twitter">
                <img src="./Images/Svg/instagram-brands.svg" alt="instagram icon" class="a-ig">
             </div>
+            <div class="a-lp-connector"></div>
+            <img src="./Images/Svg/scroll-icon (1).svg" alt="scroll icon" class="scroll">
          </div>
       </div>
       <div class="section-3">
@@ -51,8 +56,10 @@
             <div class="pip-rect">
                <h1>PIPPINNS</h1>
                <div class="pip-seperator"></div>
-               <p class="pip-text1">Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Autem voluptatum, cumque<br> fuga totam </p>
-               <p class="pip-text2">Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Autem voluptatum, cumque<br> fuga totam </p>
+               <p class="pip-text1-d">Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Autem voluptatum, cumque<br> fuga totam </p>
+               <p class="pip-text2-d">Lorem ipsum dolor sit, amet consectetur<br> adipisicing elit. Autem voluptatum, cumque<br> fuga totam </p>
+               <p class="pip-text1-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam </p>
+               <p class="pip-text2-m">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, cumque fuga totam </p>
             </div>
             <img src="./Images/Png/about-gym 1-min.png" alt="a gym" class="pip-img">
          </div>
