Made adjustments to mobile view

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                <h1 class="wwo-slope-d">WHAT <br>WE <br>OFFER</h1>
                <h1 class="wwo-slope-m">WHAT WE OFFER</h1>
             </div>
+            <div class="wwo-sep-m"></div>
             <div class="wwo-content">
                <p class="wwo-text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
                <p class="wwo-text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatum, <br>cumque fuga totam fugiat corporis officia aliquam sit porro nesciunt <br>commodi nobis quibusdam!</p>
