--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                      <div class="burger-line"></div>
                   </div>
                </div>
+               <div class="menu-burger">
+                  <li><a href="./index.html">home</a></li>
+                  <li><a href="./about.html">about</a></li>
+                  <li><a href="#section-7">pricing</a></li>
+                  <li><a href="#section-9" class="contact-nav">contact</a></li>
+               </div>
             </div>
          </nav>
       </header>
