--- a/about.html
+++ b/about.html
@@ -19,14 +19,20 @@
                   </a>
                   <h1>Pippinns</h1>
                   <ul>
-                     <li><a href="./index.html">home</a></li>
-                     <li><a href="./about.html">about</a></li>
-                     <li><a href="./">pricing</a></li>
-                     <li><a href="#section-6" class="contact-nav">contact</a></li>
+                     <li><a href="./index.html" class="link-nav">home</a></li>
+                     <li><a href="./about.html" class="link-nav">about</a></li>
+                     <li><a href="#section-7" class="link-nav">pricing</a></li>
+                     <li><a href="#section-9" class="link-nav">contact</a></li>
                   </ul>
                   <div class="burger">
                      <div class="burger-line"></div>
                   </div>
+               </div>
+               <div class="menu-burger">
+                  <li><a href="./index.html" class="nav-link">home</a></li>
+                  <li><a href="./about.html" class="nav-link">about</a></li>
+                  <li><a href="#section-7" class="nav-link">pricing</a></li>
+                  <li><a href="#section-9" class="nav-link">contact</a></li>
                </div>
             </div>
          </nav>
@@ -138,5 +144,8 @@
          </div>
       </footer>
    </div>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+   <script src="./script.js"></script>
 </body>
 </html>
