--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             </div>
          </nav>
       </header>
-      <div class="section-2">
+      <div class="section-2a">
          <div class="a-lp">
             <div class="a-lp-slope"></div>
             <h1 class="a-lp-about">ABOUT</h1>
@@ -146,6 +146,6 @@
    </div>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-   <script src="./script.js"></script>
+   <script src="./about.js"></script>
 </body>
 </html>
