--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                   <ul>
                      <li><a href="./index.html" class="link-nav">home</a></li>
                      <li><a href="./about.html" class="link-nav">about</a></li>
-                     <li><a href="#section-7" class="link-nav">pricing</a></li>
-                     <li><a href="#section-9" class="link-nav">contact</a></li>
+                     <li><a href="#section-7" class="link-nav" id="scroll-pricing">pricing</a></li>
+                     <li><a href="#section-9" id="scroll-contact" class="link-nav">contact</a></li>
                   </ul>
                   <div class="burger">
                      <div class="burger-line"></div>
